--- a/cfg/bindsMain.cfg
+++ b/cfg/bindsMain.cfg
@@ -64,8 +64,8 @@ bind o "+vstr stepSensitivityOn stepSensitivityOff" //(hold) sensitivity live ad
 
 //----TEMP KEYS----//
 
-bind z "+vstr tempKeyAOn tempKeyAOff"       //Primary   rebindable via menus
-bind x "+vstr tempKeyBOn tempKeyBOff"       //Secondary rebindable via menus
+bind g "+vstr tempKeyAOn tempKeyAOff"       //Primary   rebindable via menus
+bind v "+vstr tempKeyBOn tempKeyBOff"       //Secondary rebindable via menus
 
 
 //----SCROLL MENUS----//
