--- a/cfg/step/menuChat_a.cfg
+++ b/cfg/step/menuChat_a.cfg
@@ -19,13 +19,13 @@ set data_A_08 ""
 set data_A_09 "" 
 set data_A_10 ""
 
-set data_B_00 "vstr step04" 
+set data_B_00 "vstr step05" 
 set data_B_01 "vstr internal_A; ut_echo ^2->^6Thanks^7..Nice.....Sorry  ; vstr internal_C"   
 set data_B_02 "vstr internal_A; ut_echo ^7Thanks.....^2->^6Nice^7..Sorry; vstr internal_C"
 set data_B_03 "vstr internal_A; ut_echo ^7Thanks.....Nice.....^2->^6Sorry  ; vstr internal_C" 
 set data_B_04 "vstr internal_A; vstr internal_B; ut_echo ^2->^6No problem^7..Medic"  
-set data_B_05 "str internal_A; vstr internal_B; ut_echo ^7No problem.....^2->^6Medic" 
-set data_B_06 """
+set data_B_05 "vstr internal_A; vstr internal_B; ut_echo ^7No problem.....^2->^6Medic" 
+set data_B_06 "vstr step01"
 set data_B_07 ""
 set data_B_08 ""
 set data_B_09 ""   
