--- a/cfg/tempKeys/steadyKeys.cfg
+++ b/cfg/tempKeys/steadyKeys.cfg
@@ -5,7 +5,7 @@ ut_echo "^5Secondary Key:  ^2Medium Scope"
 
 
    //lowers, then resets sensitivity and liveAdjustments
-set tempKeyAOn  "-attack; vstr slowhand"
+set tempKeyAOn  "-attack; vstr mouse_mod_slowhand"
 set tempKeyAOff "-attack"
 
 set tempKeyBOn  "-attack; vstr quickscope"
