--- a/cfg/step/menuGear_G36.cfg
+++ b/cfg/step/menuGear_G36.cfg
@@ -24,7 +24,7 @@ set data_A_10 ""
 set data_B_00 "vstr step04"
 set data_B_01 "vstr internal_A; ut_echo ^2->^6Deagle^7..Beretta.....Colt; vstr internal_C"
 set data_B_02 "vstr internal_A; ut_echo ^7Deagle.....^2->^6Beretta^7..Colt; vstr internal_C"
-set data_B_03 ""vstr internal_A; ut_echo ^7Deagle.....Beretta.....^2->^6Colt; vstr internal_C"
+set data_B_03 "vstr internal_A; ut_echo ^7Deagle.....Beretta.....^2->^6Colt; vstr internal_C"
 set data_B_04 "vstr internal_A; vstr internal_B; ut_echo ^2->^6Glock"
 set data_B_05 "vstr step01"
 set data_B_06 ""
