--- a/cfg/step/jumpMenu.cfg
+++ b/cfg/step/jumpMenu.cfg
@@ -1,6 +1,11 @@
+
 set stepRecall vstr step01
 
-set internal_A "vstr blnk;  ut_echo ^0*****^5JUMP MENU^0*****"
+set ghost00 "set cg_ghost 1; set toggleGhost vstr ghost01; ut_echo ^5GHOST MODE HAS BEEN ^2ENABLED"
+set ghost01 "set cg_ghost 0; set toggleGhost vstr ghost00; ut_echo ^5GHOST MODE HAS BEEN ^1DISABLED"
+set toggleGhost "vstr ghost00"
+
+set internal_A "vstr blnk; ut_echo ^0*****^5JUMP MENU^0*****"
 set internal_B "ut_echo ^7Load.....Save.....Stamina"
 set internal_C "ut_echo ^7Ghost.....Allowgoto.....Kill"
 
@@ -8,9 +13,9 @@ set internal_C "ut_echo ^7Ghost.....Allowgoto.....Kill"
 set data_A_00 ""
 set data_A_01 "load"
 set data_A_02 "save"
-set data_A_03 "toggle regainstamina"
-set data_A_04 "toggle cg_ghost 1"
-set data_A_05 "toggle allowgoto"
+set data_A_03 "regainstamina"
+set data_A_04 "vstr toggleGhost"
+set data_A_05 "allowgoto"
 set data_A_06 "kill"
 set data_A_07 ""
 set data_A_08 ""
