--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,14 +1,14 @@
-=========================================================================================
-                         _  __                 _  _  __ _    
-                        | |/ / _ _  ___  _ _  (_)| |/ /( )___
-                        | ' < | '_|/ _ \| ' \ | || ' < |/(_-<
-                        |_|\_\|_|  \___/|_||_||_||_|\_\  /__/
-
-                            ULTIMATE URBAN TERROR CONFIG
-                            Contact: Daniel@nusalaska.com
-						(origionally Created by RexGoodthings)
-
-=========================================================================================
+//=========================================================================================
+//                         _  __                 _  _  __ _    
+//                        | |/ / _ _  ___  _ _  (_)| |/ /( )___
+//                        | ' < | '_|/ _ \| ' \ | || ' < |/(_-<
+//                        |_|\_\|_|  \___/|_||_||_||_|\_\  /__/
+//
+//                            ULTIMATE URBAN TERROR CONFIG
+//                            Contact: Daniel@nusalaska.com
+//						(origionally Created by RexGoodthings)
+//
+//=========================================================================================
 
 
 unbindall
@@ -20,7 +20,7 @@ exec /cfg/settingsGame.cfg          //default game settings
 exec /cfg/settingsHUD.cfg           //default hud settings
 exec /cfg/settingsMenus.cfg         //menu initialization
 exec /cfg/mouseDefault.cfg          //default mouse binds
-exec /cfg/bindsMainESDF.cfg         //default key binds except:
+exec /cfg/bindsMain.cfg         //default key binds except:
 exec /cfg/bindsKeypadA.cfg 			//numpad key binds
 
 // ALTERNATE WASD KEYBIND CONFIG
